# pybind11_Qt_Console

./: .clang-format  .clang-tidy  .clangd  .gitignore  Allmake  CMakeLists.txt  CMakePresets.json  README.md  commands.hpp  main.cpp  mainWindow.cpp  mainWindow.hpp  pythonCommands.hpp  pythonTerminal.cpp  pythonTerminal.hpp  requirements.txt  vcpkg.json
pythonEmbedding/: pythonConsole.cpp  pythonConsole.hpp  pythonInterpreter.cpp  pythonInterpreter.hpp
src/: main.cpp  mainWindow.cpp  mainWindow.hpp
src/LLMChat/: CMakeLists.txt  LLMChat.cpp  LLMChat.hpp  chatItemWidget.cpp  chatItemWidget.hpp  chatItemWidget.ui  chatUtils.hpp
src/LLMConsole/: CMakeLists.txt  LLMConsole.cpp  LLMConsole.hpp
src/app/: CMakeLists.txt  mainWindow.cpp
src/commands/: commandManager.cpp  commandManager.hpp  commandUtil.hpp  commands.cpp  commands.hpp  pythonCommands.cpp
src/core/: CMakeLists.txt
src/core/commands/: commandManager.hpp  commandUtil.hpp  commands.cpp  commands.hpp
src/core/model/: dataModel.cpp  group.hpp  object.hpp  root.hpp
src/gui/: CMakeLists.txt  mainWindow.cpp  mainWindow.hpp
src/gui/resource/: resources.qrc
src/model/: dataModel.cpp  dataModel.hpp  group.hpp  object.hpp  order.hpp  root.hpp
src/pybind11Embedding/: pythonCommandLine.cpp  pythonCommandLine.hpp  pythonCommands.cpp  pythonCommands.hpp  pythonConsole.cpp  pythonConsole.hpp  pythonInterpreter.cpp  pythonInterpreter.hpp
src/pythonCommands/: pythonCommandUtil.hpp  pythonCommands.cpp
src/pythonEmbedding/: CMakeLists.txt  pythonConsole.hpp  pythonInterpreter.cpp
src/pythonEmbedding/commands/: pythonCommandUtil.hpp  pythonCommands.cpp  pythonCommands.hpp
src/pythonEmbedding/console/: pythonCommandLine.cpp  pythonInterpreter.cpp
src/pythonTerminal/: pythonCommands.cpp  pythonCommands.hpp  pythonInterpreter.cpp  pythonInterpreter.hpp  pythonTerminal.cpp  pythonTerminal.hpp
src/resource/: resources.qrc
